<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoBank</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="capture_image_preview">Captured Image</string>
    <string name="front_upper">FRONT</string>
    <string name="back_upper">BACK</string>
    <!-- login text -->
    <string name="txt_login_title">Login</string>
    <string name="txt_login_name">Login Name</string>
    <string name="txt_login_password">Login Password</string>
    <string name="txt_remember_me">Remember Me</string>

    <!-- camera text -->
    <string name="txt_front_check_title">Take front</string>
    <string name="txt_back_check_title">Take back</string>
    <string name="txt_card_number">Card Number</string>
    <string name="txt_cvv">CVV</string>
    <string name="txt_example_card_number">1234 5678 9101 1121</string>
    <string name="txt_example_card_cvv">123</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Fetching your data</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Pull To Refresh -->
    <string name="pull_to_refresh">Pull To Refresh</string>
    <string name="release_to_fetch">Release and fetching</string>
    <string name="last_refresh_timestamp">Last update time:</string>
    <string name="txt_available_balance">Available Balance</string>
    <string name="loading_balance">Loading Balance now</string>
    <string name="notify_background_now_title">@string/app_name</string>
    <string name="notify_background_now_text">Running background now!</string>
    <string name="notify_background_now_explain">In case we\'re been hijacking, we will tell you when application is running background.</string>
    <string name="fetching">Fetching</string>
    <string name="more">More Transactions</string>
    <string name="more_fetching">Fetching more transactions...</string>

    <!-- Menu -->
    <string name="hello_user">HELLO, USER!</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="menu_log_out">Log out</string>

    <!-- Setting Home -->
    <string name="personal_info">Personal Information</string>
    <string name="personal_info_detail">Email, Address and Phone number</string>
    <string name="security_setting">Security Settings</string>
    <string name="security_setting_detail">Auto logout and trust devices and so on.</string>
    <string name="monthly_charge_fee">Monthly Charge Fee</string>
    <string name="monthly_charge_fee_detail">How much we will charge you?</string>
</resources>
