<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_root"
    android:background="@color/primary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <include
        android:id="@+id/slide_button"
        layout="@layout/item_slide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_centerInParent="true"
                    android:paddingTop="26dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gw2_logo"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_name"
                    style="@style/TextMedium"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/item_interval_bottom"/>

                <EditText
                    android:id="@+id/login_page_input_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    style="@style/TextSmallMedium"
                    android:layout_marginBottom="@dimen/item_interval_bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_password"
                    style="@style/TextMedium"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/item_interval_bottom"/>

                <EditText
                    android:id="@+id/login_page_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/TextSmallMedium"
                    android:layout_marginBottom="@dimen/item_interval_bottom"/>

                <CheckBox
                    style="@style/checkboxCompat"
                    android:id="@+id/login_page_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remember_me"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/item_interval_bottom"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_page_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:background="@color/accent"
                android:layout_margin="4dp"
                android:textAllCaps="false"
                android:onClick="onClickLogin"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>