<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/card_info_page_lb_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/txt_card_number"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_info_page_lb_card_cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/txt_cvv"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/card_info_page_input_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/card_info_page_lb_card_number"
                    android:background="@null"
                    android:hint="@string/txt_example_card_number"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/card_info_page_input_card_cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/card_info_page_lb_card_cvv"
                    android:background="@null"
                    android:hint="@string/txt_example_card_cvv"
                    android:inputType="number" />

                <View
                    android:id="@+id/input_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_below="@id/card_info_page_input_card_cvv"
                    android:layout_marginTop="-3dp"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/card_info_page_input_card_number_sufix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="1234"
                    android:visibility="invisible" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Sign Up"/>
</LinearLayout>